tests/ui/fail-try-parse-nightly/invalid_operator.stderr
error: Invalid SQL operator `INVALID`
 --> tests/ui/fail-try-parse-nightly/invalid_operator.rs:6:13
  |
6 |         age INVALID i32  // Invalid operator
  |             ^^^^^^^
  |
  = help: Supported operators are: =, !=, >, <, >=, <=, LIKE, ILIKE, IN, NOT IN
